--- a/charts/registry-scanner/templates/secret.yaml
+++ b/charts/registry-scanner/templates/secret.yaml
@@ -34,3 +34,13 @@ metadata:
 data:
   root_ca_file_{{$index}}.crt: {{ $cert | b64enc | quote }}
 {{- end }}
+{{- if eq .Values.config.registryType "ocp" }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "registry-scanner.serviceAccountName" . }}-token
+  annotations:
+    kubernetes.io/service-account.name: {{ include "registry-scanner.serviceAccountName" . }}
+type: kubernetes.io/service-account-token
+{{- end }}
