--- a/charts/cluster-scanner/tests/deployment_test.yaml
+++ b/charts/cluster-scanner/tests/deployment_test.yaml
@@ -535,3 +535,14 @@ tests:
     asserts:
       - failedTemplate:
           errorMessage: "Both existingKeySecret and existingCertSecret must be set when using nats customCerts"
+
+  - it: tests labels settings
+    templates:
+      - ../templates/deployment.yaml
+    set:
+      labels:
+        foo: bar
+    asserts:
+      - equal:
+          path: metadata.labels.foo
+          value: bar
