--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -344,3 +344,6 @@ ssl:
 
 # Option to make it possible to disable platform services
 disablePlatformScanning: false
+
+# Set Cluster Scanner pod labels
+labels: {}
