--- a/charts/cluster-scanner/templates/deployment.yaml
+++ b/charts/cluster-scanner/templates/deployment.yaml
@@ -26,6 +26,9 @@ spec:
       {{- end }}
       labels:
         {{- include "cluster-scanner.selectorLabels" . | nindent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- with .Values.global.image.pullSecrets }}
       imagePullSecrets:
