Introduce the ability to set custom labels for cluster-scanner
Signed-off-by: Daniele De Lorenzi <daniele.delorenzi@sysdig.com>

--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -297,6 +297,9 @@ securityContext: {}
 # Set Cluster Scanner Selector Labels
 selectorLabels: {}
 
+# Set Cluster Scanner Custom Labels
+labels: {}
+
 # Set Cluster Scanner Node Selector
 nodeSelector:
   # Cluster Scanner is only supported on nodes with amd64 architecture
