--- a/charts/cluster-scanner/tests/label_test.yaml
+++ b/charts/cluster-scanner/tests/label_test.yaml
@@ -18,7 +18,7 @@ tests:
   - it: check application of cluster scanner labels example 1
     template: deployment.yaml
     set:
-      labels: {"my.label/key1": "testlabel1","my.label/key2": "testlabel2"}
+      podLabels: {"my.label/key1": "testlabel1","my.label/key2": "testlabel2"}
     asserts:
     - equal:
         path: metadata.labels['my.label/key1']
@@ -30,7 +30,7 @@ tests:
   - it: check application of cluster scanner labels example 2
     template: deployment.yaml
     set:
-      labels:
+      podLabels:
         my.label/key1: testlabel1
         my.label/key2: testlabel2
     asserts:
@@ -44,7 +44,7 @@ tests:
   - it: check application of cluster scanner labels example 3
     template: deployment.yaml
     set:
-      labels:
+      podLabels:
         my.label/key: testlabel
         my.label/version: 2.7.3
     asserts:
@@ -58,7 +58,7 @@ tests:
   - it: check application of correct cluster scanner labels with value of label empty
     template: deployment.yaml
     set:
-      labels: "my.label/key1: "
+      podLabels: "my.label/key1: "
     asserts:
     - isEmpty:
         path: metadata.labels['my.label/key1']
@@ -66,7 +66,7 @@ tests:
   - it: check application of incorrect cluster scanner labels with yaml
     template: deployment.yaml
     set:
-      labels: "my.label/key1:testlabel1"
+      podLabels: "my.label/key1:testlabel1"
     asserts:
     - failedTemplate:
         errorMessage: "labels does not seem to be of the type key:[space]value"
@@ -74,7 +74,7 @@ tests:
   - it: check application of incorrect cluster scanner labels with yaml key is empty
     template: deployment.yaml
     set:
-      labels: ":testlabel1"
+      podLabels: ":testlabel1"
     asserts:
     - failedTemplate:
         errorMessage: "labels does not seem to be of the type key:[space]value"
