feat(cluster-scanner,sysdig-deploy): add option to populate custom labels for cluster scanner (#1691)
Signed-off-by: Daniele De Lorenzi <daniele.delorenzi@sysdig.com>
Co-authored-by: Daniele De Lorenzi <daniele.delorenzi@sysdig.com>
Co-authored-by: Marco Vito Moscaritolo <mavimo@gmail.com>

--- a/charts/cluster-scanner/values.yaml
+++ b/charts/cluster-scanner/values.yaml
@@ -344,3 +344,9 @@ ssl:
 
 # Option to make it possible to disable platform services
 disablePlatformScanning: false
+
+# Set Cluster Scanner pod labels
+podLabels: {}
+
+# Set Cluster Scanner labels
+labels: {}
