--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -492,6 +492,14 @@ nodeAnalyzer:
       # Provide the filename that is defined inside the existing ConfigMap.  Required if existingCaConfigMap is set.
       existingCaConfigMapKeyName:
 
+      # If Bottlerocket is enabled then the apiclient and api socket will be mounted
+      bottlerocket:
+        enabled: false
+        # Path to host apiclient binary
+        apiClientPath: /usr/bin/apiclient
+        # Path to host api socket
+        apiServerSocketPath: /run/api.sock
+
 tests:
   timeout: 300s
   image:
