--- a/charts/agent/tests/delegated_agent_deployment_test.yaml
+++ b/charts/agent/tests/delegated_agent_deployment_test.yaml
@@ -482,6 +482,34 @@ tests:
       - templates/configmap.yaml
       - templates/configmap-deployment.yaml
 
+  - it: Checking that delegated deployment tag is set in deployment configmap with global tags
+    set:
+      global:
+        sysdig:
+          tags:
+            foo: bar
+      delegatedAgentDeployment:
+        enabled: true
+    asserts:
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |
+            tags: foo:bar,com.sysdig.delegated-agent-deployment:true
+    templates:
+      - templates/configmap-deployment.yaml
+
+  - it: Checking that delegated deployment tag is set in deployment configmap
+    set:
+      delegatedAgentDeployment:
+        enabled: true
+    asserts:
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |
+            tags: com.sysdig.delegated-agent-deployment:true
+    templates:
+      - templates/configmap-deployment.yaml
+
   - it: Ensure sanity of Agent service account
     set:
       delegatedAgentDeployment:
