--- a/charts/agent/templates/configmap.yaml
+++ b/charts/agent/templates/configmap.yaml
@@ -8,59 +8,7 @@ metadata:
 {{ (include "agent.labels" .) | indent 4 }}
 data:
   dragent.yaml: |
-    new_k8s: true
-{{- include "agent.clusterName" . | trim | nindent 4 }}
-{{- if .Values.delegatedAgentDeployment.enabled }}
-  {{- if not (hasKey .Values.sysdig.settings "cointerface_enabled") }}
-    cointerface_enabled: false
-  {{- end }}
-{{- end }}
-{{- include "agent.connectionSettings" . | trim | nindent 4 }}
-{{- include "agent.planSettings" . | trim | nindent 4 }}
-{{/* Calculate the leaderElection/k8s_colstart information.
-     The computed/combined results are merged with any overrides specified
-     in sysdig.settings and will be rendered with that block */}}
-{{- include "agent.leaderElection" . }}
-{{- include "agent.disableCaptures" . | nindent 4 }}
-{{- include "agent.logSettings" . }}
-{{- if .Values.global.sysdig.tags }}
-    tags: {{ include "agent.tags" . }}
-{{- end }}
-{{/*
-  Unset proxy_user and proxy_password if present and gke autopilot is disabled.
-*/}}
-{{- if and (hasKey .Values.sysdig.settings "http_proxy") (not (include "agent.gke.autopilot" .)) }}
-  {{- $_ := unset .Values.sysdig.settings.http_proxy "proxy_user" -}}
-  {{- $_ := unset .Values.sysdig.settings.http_proxy "proxy_password" -}}
-{{- end }}
-{{/*
-  Checking here the user is using Custom CA and if http_proxy.ssl = true
-  If these conditions are true, then we use the agent.sslCaFileName for the http_proxy.ca_certificate
-*/}}
-{{- $baseSettings := .Values.sysdig.settings -}}
-{{- if and (include "agent.gke.autopilot" .) (or (not (hasKey $baseSettings "promscrape_web_address")) (eq (get $baseSettings "promscrape_web_address") "127.0.0.1:9990") ) }}
-  {{- $baseSettings := mergeOverwrite $baseSettings (dict "promscrape_web_address" "127.0.0.1:9991") -}}
-{{- end }}
-{{- if and (eq (include "sysdig.custom_ca.enabled"  (dict "global" .Values.global.ssl "component" .Values.ssl)) "true") (.Values.sysdig.settings) (hasKey .Values.sysdig.settings "http_proxy") (hasKey (default dict .Values.sysdig.settings.http_proxy) "ssl") (eq (get (default (dict "ssl" false) .Values.sysdig.settings.http_proxy) "ssl") true) }}
-  {{- $caFilePath := printf "%s%s" "/etc/ca-certs/" (include "sysdig.custom_ca.keyName"  (dict "global" .Values.global.ssl "component" .Values.ssl)) }}
-  {{- $mergedSettings := mergeOverwrite $baseSettings (dict "http_proxy" (dict "ca_certificate" $caFilePath)) -}}
-  {{ toYaml $mergedSettings | nindent 4 }}
-{{- else if .Values.sysdig.settings }}
-  {{ toYaml .Values.sysdig.settings | nindent 4 }}
-{{- end }}
-{{- if .Values.leaderelection.enable }}
-    k8s_delegation_election: true
-    k8s_coldstart:
-      enabled: true
-      enforce_leader_election: true
-      namespace: {{ include "agent.namespace" . }}
-{{- end }}
-{{- if .Values.localForwarder.enabled }}
-    local_forwarder:
-      enabled: true
-      transmit_message_types:
-        {{- toYaml .Values.localForwarder.transmitMessageTypes | nindent 8 }}
-{{- end }}
+{{ include "agent.configMap" . | fromYaml | toYaml | indent 4 }}
 {{- if .Values.prometheus.file }}
   prometheus.yaml: |
 {{ toYaml .Values.prometheus.yaml | indent 4 }}
