--- a/charts/agent/tests/delegated_agent_deployment_test.yaml
+++ b/charts/agent/tests/delegated_agent_deployment_test.yaml
@@ -383,16 +383,34 @@ tests:
           pattern: |-
             commandlines_capture:
               enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             drift_control:
               enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             drift_killer:
               enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             falcobaseline:
               enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             memdump:
               enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             network_topology:
               enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             secure_audit_streams:
               enabled: false
     templates:
