--- a/charts/agent/tests/monitor_enable_test.yaml
+++ b/charts/agent/tests/monitor_enable_test.yaml
@@ -39,10 +39,19 @@ tests:
           path: data['dragent.yaml']
           pattern: |-
             app_checks_enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             jmx:
               enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             prometheus:
               enabled: false
+      - matchRegex:
+          path: data['dragent.yaml']
+          pattern: |-
             statsd:
               enabled: false
     template: templates/configmap.yaml
