--- a/charts/agent/tests/readiness_probe_test.yaml
+++ b/charts/agent/tests/readiness_probe_test.yaml
@@ -17,6 +17,7 @@ tests:
                port: 24483
              initialDelaySeconds: 90
              periodSeconds: 3
+             failureThreshold: 3
     template: templates/daemonset.yaml
   - it: "[DaemonSet] Readiness Probe (agent == 12.18.0)"
     set:
@@ -32,6 +33,7 @@ tests:
               port: 24483
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
     template: templates/daemonset.yaml
   - it: "[DaemonSet] Readiness Probe (agent < 12.18.0)"
     set:
@@ -48,6 +50,7 @@ tests:
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
     template: templates/daemonset.yaml
   - it: "[DaemonSet] Readiness Probe (agent == dev)"
     set:
@@ -64,6 +67,7 @@ tests:
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
     template: templates/daemonset.yaml
   - it: "[DaemonSet] Readiness Probe (agent == latest)"
     set:
@@ -80,6 +84,7 @@ tests:
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
     template: templates/daemonset.yaml
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent > 12.18.0)"
     set:
@@ -97,6 +102,8 @@ tests:
               port: 24483
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
+
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent == 12.18.0)"
     set:
       delegatedAgentDeployment:
@@ -113,6 +120,8 @@ tests:
               port: 24483
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
+
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent < 12.18.0)"
     set:
       delegatedAgentDeployment:
@@ -130,6 +139,8 @@ tests:
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
+
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent == dev)"
     set:
       delegatedAgentDeployment:
@@ -147,6 +158,8 @@ tests:
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
+
   - it: "[DelegatedAgentDeployment] Readiness Probe (agent == latest)"
     set:
       delegatedAgentDeployment:
@@ -164,17 +177,21 @@ tests:
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
+
   - it: Test setting probe delays
     set:
       daemonset:
         probes:
           initialDelay: 5
           periodDelay: 3
+          failureThreshold: 10
       delegatedAgentDeployment:
         deployment:
           probes:
             initialDelay: 5
             periodDelay: 3
+            failureThreshold: 10
         enabled: true
     asserts:
       - equal:
@@ -183,6 +200,9 @@ tests:
       - equal:
           path: spec.template.spec.containers[0].readinessProbe.periodSeconds
           value: 3
+      - equal:
+          path: spec.template.spec.containers[0].readinessProbe.failureThreshold
+          value: 10
 
   - it: "Do not use the HTTP Readiness Probe on GKE Autopilot"
     set:
@@ -201,6 +221,7 @@ tests:
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
 
   - it: "Do not use the HTTP Readiness Probe on GKE Autopilot"
     set:
@@ -218,3 +239,4 @@ tests:
                 - /opt/draios/logs/running
             initialDelaySeconds: 90
             periodSeconds: 3
+            failureThreshold: 3
