--- a/charts/node-analyzer/values.yaml
+++ b/charts/node-analyzer/values.yaml
@@ -393,7 +393,7 @@ nodeAnalyzer:
 
     image:
       repository: sysdig/vuln-host-scanner
-      tag: "0.8.1"
+      tag: "0.9.0"
       digest:
       pullPolicy:
 
@@ -401,6 +401,12 @@ nodeAnalyzer:
     httpProxy:
     httpsProxy:
     noProxy:
+
+    # Prometheus configuration
+    prometheus:
+      enabled: false
+      # endpoint: "/metrics"
+      # port: "25000"
 
     resources:
       requests:
